--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "jpegtran-bin": "^3.2.0",
     "jshint-stylish": "^2.2.1",
     "opn": "^5.3.0",
-    "stream-combiner2": "^1.1.1"
+    "stream-combiner2": "^1.1.1",
+    "bower": "^1.8.14"
   },
   "engines": {
     "node": ">=0.10.0"
@@ -38,5 +39,13 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/calaos/calaos-web-app.git"
+  },
+  "scripts": {
+    "postinstall": "bower install",
+    "start": "gulp serve",
+    "build": "gulp"
+  },
+  "resolutions": {
+    "graceful-fs": "^4.2.10"
   }
 }
